LIST OF CHANGES

 - remove models for db tables that are due to be dropped
 - update apache conf so server run with 1 thread/child w/mpm_worker_module
   Config::IniFiles used by ClearPress::util does not seem to be thread safe
 - replace image generation/manipulation routines by a stub
   returning a simple static image (these routines are used
   in npg_qc in web pages that are no longer used).

release 86.1
 - update models, droping cost code and cost group
 - updating templates to remove broken R&D watermark based on cost_code
 - deleting fixtures and tests for cost code and cost group
 - under modperl information about request url is not available in
   env. variables; now getting it directy from the CGI module
 - when possible, any subsequent requests should go to the server
   from which the original page was served (makes sense in general
   and helps to set up proper dev environment)
 - web pages - drop buttons linking to non-existing pages

release 86.0
 - httpd config files for httpd v.2.4.23 and mod-perl v.2
 - simple uptime report for Illumina sequencing instruments
 - reinmplementation of events reporting
 - timing of emails to followers is changed from statuses
   'run complete' and 'run archived' to 'qc review pending' and 'qc complete'.
 - ClearPress library is pinned to v. 473.0.5

release 85.6
 - code and tests changes to reduce number of warnings under Perl 5.22.2
 - use mysql 5.7.13 in travis (installing from deb)
 - Run web page
   - removed image browser link
   - Add EBI submissions link
 - Build.PL fix to ensure that images under htdocs dir are copied to blib
   when building.
 - updated links to NPG QC since the pages moved to SeqQC

release 85.5
 - removed all code that relates to instrument utilisation
 - removed an option to create database entries via XML POST.
 - removed custom error view
 - deleted special privisions for the 'pipeline' user
 - removed unused xml views for run lists