@@ -1,5 +1,8 @@
 LIST OF CHANGES
 
+ - event notification:
+     use faster ml warehouse st::api::lims driver (ml_warehouse_fc_cache)
+     find templates directory relative to the running script bin
  - remove models for db tables that are due to be dropped
  - update apache conf so server run with 1 thread/child w/mpm_worker_module
    Config::IniFiles used by ClearPress::util does not seem to be thread safe
